# v-c-tool

./: .gitignore  meson.build
include/vctool/: backup.h  certificate.h  commandline.h  components.h  control.h  endorse.h  file.h  readpassword.h  status_codes.h
include/vctool/command/: endorse.h  root.h
include/vctool/status_codes/: backup.h  commandline.h  endorse.h  file.h  keygen.h  pubkey.h
src/command/endorse/: certfile.h  certfile_create.c  endorse_build_output_file.c  endorse_build_uuid_dictionary.c  endorse_build_working_set.c  endorse_command_func.c  endorse_command_init.c  endorse_emit_public_certificate_fields.c  endorse_emit_working_set.c  endorse_get_endorse_config_file.c  endorse_get_endorser_details.c  endorse_get_input_file.c  endorse_get_key_file.c  endorse_get_output_filename.c  endorse_get_pubkey_file.c  endorse_get_pubkey_id.c  endorse_internal.h  endorse_read_endorse_config_file.c  endorse_read_input_certificate.c  endorse_read_key_certificate.c  endorse_read_password_and_decrypt_certfile.c  endorse_uuid_dictionary_add.c  endorse_uuid_dictionary_compare.c  endorse_uuid_dictionary_entry_resource_release.c  endorse_uuid_dictionary_key.c  endorse_working_set_add_capabilities.c  endorse_working_set_add_role_capabilities.c  endorse_working_set_add_verb_capability.c  endorse_working_set_compare.c  endorse_working_set_entry_resource_release.c  endorse_working_set_get_key.c  process_endorse_command.c
src/command/help/: help_print.c
src/command/keygen/: keygen_command_func.c
src/command/pubkey/: pubkey_command_func.c
src/command/root/: dispatch_root_commands.c  root_command_init.c  root_dict_add.c  root_permission_add.c
src/commandline/: commandline_opts_init.c
src/lib/backup/: backup_file_encryption_header_write.c
src/lib/certificate/: certificate_decrypt.c  certificate_encrypt.c
src/lib/endorse/: endorse.l  endorse.y  endorse_analyze.c  endorse_config_create_ex.c  (+12 more)
src/vctool/: main.c
subprojects/: minunit.wrap  rcpr.wrap  vcblockchain.wrap  vccert.wrap  vccrypt.wrap  vcdb.wrap  vcmodel.wrap  vpr.wrap
test/backup/: test_backup_file_encryption_header_write.cpp  test_backup_structs.cpp
test/commandline/: test_commandline_opts_init.cpp
test/endorse/: test_endorse_config.cpp
test/file/: mock_file.cpp  mock_file.h  test_file.cpp
(+5 files in other folders)
